# jaka_grasping

./: CMakeLists.txt  LICENSE  README.md  grasp_result.txt  package.xml
config/: settings.yaml
handeye_calibration/: CMakeLists.txt  README.md  package.xml
handeye_calibration/launch/: apriltag_start.launch  aruco_start.launch  hand_to_eye_calib.launch  robot_start.launch
handeye_calibration/scripts/: automatic_hand_to_eye_calib.py  easy_hand_to_eye_calib.py  hand_to_eye_calib.py  result_analysis.py
handeye_calibration/yaml/: camera_to_base_matrix.yaml  camera_to_base_matrix_apriltag.yaml  camera_to_base_matrix_aruco.yaml
jaka_ros_driver/: CMakeLists.txt  README.md  package.xml
jaka_ros_driver/include/jaka_ros_driver/: conversion.h
jaka_ros_driver/launch/: start.launch
jaka_ros_driver/src/: connect_robot.cpp  robot_client.cpp  robot_sub.cpp
jaka_ros_driver/src/libs/: JAKAZuRobot.h  conversion.h  jakaAPI.h  jkerr.h  jktypes.h  robot.h
jaka_ros_driver/src/node_test/: clear_error_client.cpp  disconnect_robot.cpp  enable_servo_client.cpp  enable_teach_drag.cpp  move_jog_client.cpp  move_joint_client.cpp  move_line_client.cpp  set_collision_client.cpp  set_payload_client.cpp  set_tcp_client.cpp  set_user_frame_client.cpp  stop_move_client.cpp  subscriber_joint_states.cpp  subscriber_robot_state.cpp  subscriber_servo_line.cpp  subscriber_tool_point.cpp
launch/: object_detection_apriltag.launch
scripts/: README.md  jaka_grasp.py  object_location.py  test.cpp
visual_grasp/: CMakeLists.txt  README.md  package.xml
visual_grasp/config/: tags.yaml
visual_grasp/launch/: grasp.launch  gripper_init.launch  object_detection.launch  object_detection_apriltag.launch  object_detection_aruco.launch  robot_init.launch  start.launch
visual_grasp/scripts/: jaka_grasp.py  object_location.py  object_location_aruco.py  payload_identify.py  test.py
