<?xml version="1.0"?>
<package format="2">
  <name>handeye_calibration</name>
  <version>0.0.0</version>
  <description>The package used for hand-eye calibration</description>

  <maintainer email="12112921@mail.sustech.edu.cn">Junlin Wang</maintainer>

  <license>BSD 2-Clause "Simplified" License</license>

  <author email="12112921@mail.sustech.edu.cn">Junlin Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
